[gd_scene load_steps=2 format=3 uid="uid://q0mbi02cveqg"]

[ext_resource type="Script" uid="uid://ua44j51vsgnm" path="res://3 GUI/Menus/play menu/play_menu.gd" id="1_bn4t1"]

[node name="Play_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bn4t1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Main options" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Main options"]
layout_mode = 2
text = "LABELPLAYOPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/Main options"]
layout_mode = 2
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="PanelContainer/MarginContainer/Main options"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="joinIPButton" type="Button" parent="PanelContainer/MarginContainer/Main options/buttons"]
layout_mode = 2
text = "BUTTONIP"

[node name="joinSteamButton" type="Button" parent="PanelContainer/MarginContainer/Main options/buttons"]
layout_mode = 2
text = "BUTTONSTEAM"

[node name="hostButton" type="Button" parent="PanelContainer/MarginContainer/Main options/buttons"]
layout_mode = 2
text = "BUTTONHOST"

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/Main options/buttons"]
layout_mode = 2
size_flags_vertical = 3

[node name="backButton" type="Button" parent="PanelContainer/MarginContainer/Main options/buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "BUTTONBACK"

[node name="Ip enter" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(135, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/Ip enter"]
layout_mode = 2
placeholder_text = "TEXTEDITIPADDRESS"
alignment = 1
caret_blink = true

[node name="joinButton" type="Button" parent="PanelContainer/MarginContainer/Ip enter"]
unique_name_in_owner = true
layout_mode = 2
text = "BUTTONJOIN"

[node name="backButton2" type="Button" parent="PanelContainer/MarginContainer/Ip enter"]
layout_mode = 2
text = "BUTTONBACK"

[connection signal="pressed" from="PanelContainer/MarginContainer/Main options/buttons/joinIPButton" to="." method="_on_join_ip_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Main options/buttons/joinSteamButton" to="." method="_on_join_steam_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Main options/buttons/hostButton" to="." method="_on_host_button_pressed"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/Ip enter/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Ip enter/joinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Ip enter/backButton2" to="." method="_on_back_button_2_pressed"]
